refactor: 스크랩 목록 조회에 projection 도입[S13P31A208-280]